2004-10-19  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* pop3d.test: Made verbosity easier to switch, and log output a
	  bit more readable.

	* pop3d.tcl:  Made prefix strings of log output consistent.

2004-10-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* pop3d.test: Rewritten to use the new facilities for programmed
	  interaction and sub processes.

2004-10-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.7 ========================
	* 

2004-08-25  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* pop3d_dbox.test: Fixed problems with usage of md5, now
	* pop3d.test:      switchable between v1 and v2.
	* pop3d.tcl:

2004-05-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.6.1 ========================
	* 

2004-02-15  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.6 ========================
	* 

2004-02-10  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* pkgIndex.tcl:   Both pop3d and dbox rely on 'mime', which requires
	* pop3d.man:      Tcl 8.3. This implies that these packages require
	* pop3d_dbox.man: Tcl 8.3 as well, and not 8.2, as advertised.

	* pop3d.tcl: Requiring v1 of md5 explicitly.

	* pop3d.test:      Explicitly loading the supporting packages
	* pop3d_dbox.test: (mime, md5, dbox, udb, ...). Ensured usage of
	  md5 v1. Excluding the whole series of tests if the interpreter
	  is not at least 8.3. Added suppression of logger output.

2003-10-21  Andreas Kupries  <andreask@activestate.com>

	* pop3d.tcl (H_quit): Remember the handle of the idle event we are
	  scheduling. This event can be passed by by an eof on the
	  channel. (CloseConnection): Kill a pending idle event, it was
	  passed by and is not relevant anymore. [Bug 650977].

2003-05-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*